// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Input Default renders correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #000;
  border: 2px solid;
  border-radius: 5px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input Default renders disabled state correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: hsl(0,0%,58%);
  border: 2px solid;
  border-radius: 5px;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      color="gray.3"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={true}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input Default renders error state correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #db1d33;
  border: 2px solid;
  border-radius: 5px;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      color="red"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #000;
  border: none;
  border-radius: 5px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
  border-bottom: solid 1px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders disabled state correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
  border-bottom: solid 1px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: hsl(0,0%,58%);
  border: none;
  border-radius: 5px;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      color="gray.3"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={true}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;

exports[`Text Input No Border renders error state correctly 1`] = `
.emotion-3 {
  box-sizing: border-box;
  position: relative;
  margin: 8px;
}

.emotion-0 {
  box-sizing: border-box;
  line-height: 1.5;
  white-space: pre-wrap;
  font-family: 'Times New Roman',serif;
  background-color: #fff;
  font-family: 'Arial',system-ui,sans-serif;
  font-size: .75rem;
  padding-left: 4px;
  padding-right: 4px;
  position: absolute;
  top: -0.4rem;
  left: 4px;
}

.emotion-2 {
  box-sizing: border-box;
  padding: 4px;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  padding: 8px;
  margin: 4px;
  display: inline-block;
  border-radius: 3px;
  box-shadow: 0 0 16px rgba(0,0,0,.25);
  box-shadow: none;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-color: #db1d33;
  border: none;
  border-radius: 5px;
}

.emotion-1 {
  border: none;
  width: 100%;
  background-color: #fff;
  font-size: 0.85rem;
  line-height: 1.8;
  font-family: 'Arial',system-ui,sans-serif;
  padding-bottom: 4px;
  border-bottom: solid 1px;
  border-color: #db1d33;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1::-webkit-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::-moz-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1:-ms-input-placeholder {
  color: hsl(0,0%,58%);
}

.emotion-1::placeholder {
  color: hsl(0,0%,58%);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      color="red"
      htmlFor="name"
    >
      Name
    </label>
    <input
      className="emotion-1"
      disabled={false}
      id="name"
      name="name"
      placeholder="Hello"
      type="text"
    />
  </div>
</div>
`;
